# onion-demo

./: .cursorrules  .env-sample  .gitignore  README.md  alembic.ini  mypy.ini  pyproject.toml
.cursor/rules/: README.md  cursorrules.mdc  domain-suite-generator.js  login_task.mdc
alembic/: env.py
alembic/versions/: 20240317103904_add_user.py  20250310022612_add_comment.py  20250313014306_add_ingredients.py
src/: config.py  main.py
src/api/: deps.py  router.py
src/api/endpoints/: auth_endpoint.py  comment_endpoint.py  ingredient_endpoint.py  role_endpoint.py  user_endpoint.py
src/application/dto/: auth_dto.py  comment_dto.py  ingredient_dto.py  pagination_dto.py  response_dto.py  role_dto.py  user_dto.py
src/application/use_cases/: auth_use_cases.py  comment_use_cases.py  ingredient_use_cases.py  role_use_cases.py  user_use_cases.py
src/domain/models/: auth.py  comment.py  ingredient.py  role.py  user.py
src/domain/repositories/: auth_repository.py  comment_repository.py  ingredient_repository.py  role_repository.py  user_repository.py
src/infrastructure/db/: __init__.py  base_class.py  session.py
src/infrastructure/orm/: comment_orm_model.py  ingredient_orm_model.py  orm_update_helper.py  role_orm_model.py  user_orm_model.py
src/infrastructure/repositories/: base_repository.py  sql_auth_repository.py  sql_comment_repository.py  sql_ingredient_repository.py  sql_role_repository.py  sql_user_repository.py
src/utils/: security.py
tests/application/services/: test_comment_use_cases.py  test_user_service.py  test_user_use_cases.py
